--- a/public/assets/css/demo1/style.css
+++ b/public/assets/css/demo1/style.css
@@ -6,6 +6,7 @@
 * Licensed under ThemeForest License
 */
 :root {
+    --nav-hover-background-color: #00a9f1;
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -57,7 +58,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #000;
-  --bs-body-bg: #00f1ef;
+  --bs-body-bg: #c7f1ff;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #e9ecef;
@@ -2416,7 +2417,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #000;
-  background-color: #fff;
+  background-color: #c7f1ff;
   background-clip: padding-box;
   border: 1px solid #e9ecef;
   appearance: none;
@@ -4658,7 +4659,8 @@ div.tox .btn-group-vertical>.btn-group:not(:first-child)>.tox-button,
 
 .nav-link:hover,
 .nav-link:focus {
-  color: var(--bs-nav-link-hover-color);
+  color: white !important;
+  background-color: var(--nav-hover-background-color);
 }
 
 .nav-link.disabled {
@@ -23735,7 +23737,7 @@ div.tox .buy-now-wrapper .tox-button svg,
 
 .main-wrapper .page-wrapper {
   min-height: 100vh;
-  background: #f9fafb;
+  background: var(--bs-body-bg);
   width: calc(100% - 240px);
   margin-left: 240px;
   display: flex;
@@ -24398,12 +24400,13 @@ div.tox .buy-now-wrapper .tox-button svg,
 }
 
 .sidebar .sidebar-body .nav .nav-item:hover .nav-link .link-icon {
-  color: #6571ff;
-  fill: rgba(239, 243, 255, 0.5);
+  /* color: #6571ff;
+  fill: rgba(239, 243, 255, 0.5); */
 }
 
 .sidebar .sidebar-body .nav .nav-item.active .nav-link {
-  color: #6571ff;
+  color: white !important;
+  background-color: var(--nav-hover-background-color);
 }
 
 .sidebar .sidebar-body .nav .nav-item.active .nav-link::before {
@@ -24416,8 +24419,8 @@ div.tox .buy-now-wrapper .tox-button svg,
 }
 
 .sidebar .sidebar-body .nav .nav-item.active .nav-link .link-icon {
-  fill: rgba(239, 243, 255, 0.5);
-  color: #6571ff;
+  /* fill: rgba(239, 243, 255, 0.5);
+  color: #6571ff; */
 }
 
 .sidebar .sidebar-body .nav.sub-menu {
@@ -26641,8 +26644,8 @@ div.apexcharts-canvas .apexcharts-yaxistooltip-right:after {
 
 div.apexcharts-canvas .apexcharts-tooltip-marker {
   /*rtl:raw:
-  margin-right: 0; 
-  margin-left: 10px; 
+  margin-right: 0;
+  margin-left: 10px;
   */
 }
 
@@ -27444,7 +27447,7 @@ div.tox .tox-dialog__body {
 
 .wizard>.actions {
   /*rtl:raw:
-    text-align: left; 
+    text-align: left;
   */
 }
 
